--- a/src/main/resources/templates/eintrag.html
+++ b/src/main/resources/templates/eintrag.html
@@ -11,6 +11,13 @@
   width: 350px; /* ändern Sie die Breite nach Bedarf */
 }
 
+         body {
+      font-family: sans-serif;
+      background-image: url("https://images.pexels.com/photos/2736497/pexels-photo-2736497.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+      background-repeat: no-repeat;
+      background-size: cover;
+      }
+
     </style>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -53,7 +60,7 @@
           <th> Vorname </th>
           <th> Nachname </th>
           <th class ="email-column"> Email </th>
-          <th class ="actions-column"> Actions </th>
+          <th class ="actions-column"> Aktionen </th>
         </tr>
         </thead>
         <tbody>
