--- a/src/main/resources/templates/dozent_bearbeiten.html
+++ b/src/main/resources/templates/dozent_bearbeiten.html
@@ -25,9 +25,9 @@
 <div class = "container">
   <div class ="row justify-content-center">
     <div class = "col-lg-6 col-md-6 col-sm-6">
-      <h1 class = "text-center"> Teilnehmer bearbeiten </h1>
+      <h1 class = "text-center"> Dozenten bearbeiten </h1>
       <div class = "card-body">
-        <form th:action = "@{/eintrag/{id} (id=${eintrag.id})}" th:object = "${eintrag}" method="POST">
+        <form th:action = "@{/dozent/{id} (id=${dozent.id})}" th:object = "${dozent}" method="POST">
           <div class = "form-group">
             <label> Vorname </label>
             <input
