--- a/src/main/resources/templates/dozent_hinzufügen.html
+++ b/src/main/resources/templates/dozent_hinzufügen.html
@@ -6,16 +6,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <style>
-
          body {
       font-family: sans-serif;
       background-image: url("https://images.pexels.com/photos/2736497/pexels-photo-2736497.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
       background-repeat: no-repeat;
-      background-size: cover;
       background-attachment: fixed;
+      background-size: cover;
      }
-
-     .text-center {
+          .text-center {
   margin: 340px auto 0;
 }
 
@@ -25,9 +23,9 @@
 <div class = "container">
   <div class ="row justify-content-center">
     <div class = "col-lg-6 col-md-6 col-sm-6">
-      <h1 class = "text-center"> Teilnehmer bearbeiten </h1>
+      <h1 class = "text-center"> Dozenten erstellen </h1>
       <div class = "card-body">
-        <form th:action = "@{/eintrag/{id} (id=${eintrag.id})}" th:object = "${eintrag}" method="POST">
+        <form th:action = "@{/dozent}" th:object = "${dozent}" method="POST">
           <div class = "form-group">
             <label> Vorname </label>
             <input
@@ -71,5 +69,6 @@
     </div>
   </div>
 </div>
+
 </body>
 </html>
