--- a/src/main/resources/templates/eintrag_hinzufügen.html
+++ b/src/main/resources/templates/eintrag_hinzufügen.html
@@ -11,6 +11,7 @@
       background-image: url("https://images.pexels.com/photos/2736497/pexels-photo-2736497.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
       background-repeat: no-repeat;
       background-size: cover;
+      background-attachment: fixed;
      }
           .text-center {
   margin: 340px auto 0;
