Datum hinzugefügt, log ist jetzt ein Index

--- a/src/main/resources/templates/wochentag_bearbeiten.html
+++ b/src/main/resources/templates/wochentag_bearbeiten.html
@@ -94,6 +94,13 @@
                         />
                     </div>
 
+                    <div class = "form-group">
+                        <label> Datum </label>
+                        <input type="date" name="datum"
+                               class="form-control"
+                               th:field = "*{datum}">
+                    </div>
+
                     <div class = "footer-body">
                         <button type = "submit" class = "btn btn-primary">
                             Bestätigen
