--- a/src/main/resources/templates/wochentag_hinzufügen.html
+++ b/src/main/resources/templates/wochentag_hinzufügen.html
@@ -92,6 +92,13 @@
             />
           </div>
 
+          <div class = "form-group">
+            <label> Datum </label>
+            <input type="date" name="datum"
+                   class="form-control"
+                   th:field = "*{datum}">
+          </div>
+
           <div class = "footer-body">
             <button type = "submit" class = "btn btn-primary">
               Bestätigen
